  - show detailed error message in device list
* weather
  - merge all weather data in one dialog
  - allow showing both terrain and RASP
  - RASP download from various well-known providers
  - show satellite images from pc_met (Deutscher Wetterdienst)
  - show wave forecast from pc_met (Deutscher Wetterdienst)
* calculations
  - merge redundant waves
  - task restart
* tracking
  - enable SkyLines traffic display on Windows
* analysis
  - enhanced graphics: minor tics, color scheme, layout
  - key labels drawn on lines in several pages
  - task turnpoint label drawn on relevant pages
  - barogram: improved working band ceiling and floor calculation
  - climb history: new display uses time of climb as width of bars
  - new page: vario histogram in climb and cruise mode
  - new page: maccready cross-country speed
  - glide polar: dolphin speed line drawn on polar
* map display
  - new display: glide range line drawn to working floor
* thermal band
  - new algorithm, with improved statistics
  - separate active climb and encounter-averaged bands
* infoboxes
  - added ":1" unit for gradient type displays
  - new infobox: % time non-circling climb
  - new infobox: % climb chart showing proportions of time spent circling climb (gray), cruise,
      climbing cruise (green), circling non-climb (orange)
  - improved auto-scaling of vario-like graphical infoboxes
* Windows
  - drop support for Windows CE
  - require Windows Vista or later
  - allow starting multiple XCSoar instances
* Linux
  - drop support for SDL 1.2
  - display rotation
* Android
  - drop support for ARMv6 CPUs
* Kobo
  - support Kobo Glo HD

Version 6.8.5 - not yet released
* calculations
  - update circling percentage only when flying
  - fix circling height gain calculation
* user interface
  - fix "kg/m^2" and "lb/ft^2" unit display
  - fix inverse colors in horizon page

Version 6.8.4 - 2016/05/18
* airspace cross-section
  - use airspace visibility configuration (#3751)
* data files